--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script src="{{ '/assets/js/respond.js' | relative_url }}"></script>
+    <script src="https://kit.fontawesome.com/439240f295.js" crossorigin="anonymous"></script>
     <!--[if lt IE 9]>
       <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -21,11 +22,10 @@
       <div id="header">
         <nav>
           <ul>
-            <li class="fork"><a href="{{ site.github.repository_url }}">View On GitHub</a></li>
+            <li class="fork"><a href="https://www.linkedin.com/in/vinceefung/"><i class="fa-brands fa-linkedin"></i>&emsp;LinkedIn</a></li>
             {% if site.show_downloads %}
-              <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
-              <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
-              <li class="title">DOWNLOADS</li>
+              <li class="downloads"><a href="https://comms.vincef.ca"><i class="fa-solid fa-paintbrush"></i>&emsp;Freelance</a></li>
+              <li class="downloads"><a href="https://art.vincef.ca"><i class="fa-solid fa-photo-film"></i>&emsp;2D Anim / Art</a></li>
             {% endif %}
           </ul>
         </nav>
@@ -35,11 +35,12 @@
 
       <section>
         <div id="title">
+          <h1><img src="./assets/images/cat-banana.gif" height="200" width="auto"/></h1>
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
           <p>{{ site.description | default: site.github.project_tagline }}</p>
           <hr>
-          <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
+          <span class="credits right">Github: <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
+          <!-- <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span> -->
         </div>
 
         {{ content }}
